[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/user_interface/menus/main_menu/main_menu.gd" type="Script" id=1]

[node name="main_menu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="centre" type="CenterContainer" parent="."]
margin_right = 1022.0
margin_bottom = 597.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="grid" type="GridContainer" parent="centre"]
margin_left = 453.0
margin_top = 246.0
margin_right = 569.0
margin_bottom = 350.0

[node name="Label" type="Label" parent="centre/grid"]
margin_right = 116.0
margin_bottom = 14.0
text = "Godot Tech Demo"
align = 1

[node name="seperator_space" type="Label" parent="centre/grid"]
margin_top = 18.0
margin_right = 116.0
margin_bottom = 32.0

[node name="play_button" type="Button" parent="centre/grid"]
margin_top = 36.0
margin_right = 116.0
margin_bottom = 56.0
text = "Play"

[node name="settings_button" type="Button" parent="centre/grid"]
margin_top = 60.0
margin_right = 116.0
margin_bottom = 80.0
text = "Settings"

[node name="exit_button" type="Button" parent="centre/grid"]
margin_top = 84.0
margin_right = 116.0
margin_bottom = 104.0
text = "Exit"
[connection signal="pressed" from="centre/grid/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="centre/grid/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="centre/grid/exit_button" to="." method="_on_exit_button_pressed"]
